# ehr-llm-benchmark

./: .gitignore  README.md  index.html  main.py  pipeline.ipynb  pyproject.toml  requirements.txt
.github/workflows/: static.yml
docs/: clinical-notes-results.html  file-manifest.json  generate-manifest.js  human-eval.html  index.html  structured-ehr-results.html
docs/css/: style.css
my_datasets/mimic-iii/: preprocess_mimic3_note.py
my_datasets/mimic-iv/: preprocess_mimic.py
my_datasets/tjh/: preprocess_tjh.py
my_datasets/tjh/processed/: tjh_dataset_formatted.parquet
my_datasets/utils/: preprocess.py
pages/: clinical-notes-results.html  index.html  structured-ehr-results.html
src/error_handle/: main.py
src/fairness/: main.py
src/multimodal/: extract_embeddings.py  fusion_training.py  query_llm.py  query_llm.sh  train_fusion.sh
src/multimodal/prompts/: prompt_template.py
src/structured_ehr/: README.md  query_llm.py  query_llm.sh  run.py  train_dl.py  train_dl.sh
src/structured_ehr/config/: config.py
src/structured_ehr/models/: __init__.py  adacare.py  aicare.py  catboost.py  concare.py  dt.py  grasp.py  gru.py  lstm.py  rf.py  rnn.py  transformer.py  xgboost.py
src/structured_ehr/prompts/: prompt_template.py
src/structured_ehr/utils/: __init__.py  binary_classification_metrics.py  bootstrap.py  llm_configs.py  loss.py  metrics.py  sequence_handler.py  utils.py
src/unstructured_note/: README.md
src/unstructured_note/download_model_checkpoints/: download_models.py
src/unstructured_note/finetune_bert_based_models/: finetune_models.py  run_finetune_bert_models.sh
src/unstructured_note/freeze_setting/: run.sh  (+4 more)
structured_ehr/: README.md  evaluate.py  run.py
structured_ehr/config/: config.py
structured_ehr/prompts/: prompt_template.py
unstructured_note/: README.md
unstructured_note/download_model_checkpoints/: download_models.py
unstructured_note/finetune_bert_based_models/: finetune_models.py
unstructured_note/freeze_setting/: get_embeddings.py
unstructured_note/icd_code_clustering_task/: get_icd_clusters.py  get_icd_embeddings.py  process_icd_results.py
unstructured_note/llm_generation_setting/: process_generation_results.py  prompt_llm.py
unstructured_note/medical_sentence_matching_task/: get_sentence_embeddings.py  process_sentence_results.py
unstructured_note/utils/: binary_classification_metrics.py  bootstrap.py  config.py
(+33 files in other folders)
