[project]
name = "ehr-llm-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.5.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "catboost>=1.2.8",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "datasets>=2.14.4",
    "distro==1.9.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "filelock==3.18.0",
    "flagembedding>=1.2.11",
    "frozenlist==1.5.0",
    "fsspec==2025.3.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.29.3",
    "idna==3.10",
    "ipdb>=0.13.13",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "json-repair>=0.50.0",
    "jsonlines==4.0.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.21",
    "langchain-core==0.3.48",
    "langchain-huggingface==0.1.2",
    "langchain-text-splitters==0.3.7",
    "langsmith==0.3.18",
    "lightning==2.5.1",
    "lightning-utilities==0.14.2",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "multidict==6.2.0",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "openai==1.68.2",
    "openpyxl>=3.1.5",
    "orjson==3.10.16",
    "packaging==24.2",
    "pandas==2.2.3",
    "peft>=0.15.1",
    "pillow==11.1.0",
    "propcache==0.3.0",
    "protobuf==6.30.1",
    "psutil==7.0.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytorch-lightning==2.5.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "sacremoses>=0.1.1",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==3.4.1",
    "setuptools==78.0.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "sympy==1.13.1",
    "tenacity==9.0.0",
    "threadpoolctl==3.6.0",
    "tiktoken>=0.9.0",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "torchmetrics==1.7.0",
    "tqdm==4.67.1",
    "transformers==4.50.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "xgboost>=3.0.5",
    "yarl==1.18.3",
    "zstandard==0.23.0",
]
